change build option