@@ -51,7 +51,8 @@ object ApplicationBuild extends Build {
       templatesImport += "models.enumeration._",
       lessEntryPoints <<= baseDirectory(_ / "app" / "assets" / "stylesheets" ** "nforge.less"),
         //      jacoco.settings:_*,
-      fork in Test := false,  
+//      fork in Test := false,
+      javaOptions in test ++= Seq("-Xmx512m", "-XX:MaxPermSize=512m"),  
       parallelExecution in Test := false
 //      Play2WarKeys.servletVersion := "3.0"
       // Or Play2WarKeys.servletVersion := "2.5"
